sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:16: error: not found: value j
      j=fin-i
      ^AlgCocktailSort2:17: error: not found: value j
      if (plusPetit(j,j+1)) {
                    ^AlgCocktailSort2:17: error: not found: value j
      if (plusPetit(j,j+1)) {
                      ^AlgCocktailSort2:18: error: not found: value j
        echange(j,j+1)
                ^AlgCocktailSort2:18: error: not found: value j
        echange(j,j+1)
                  ^