sort.basic.cocktail.AlgCocktailSort2.scala.code
var debut = 0
var fin = getNombreValeurs()-2
var mem = 0
def cocktailSort2() {
  do {
    mem=1
    for (i<-debut to fin) {
      if (plusPetit(i+1,i)) {
        echange(i,i+1)
        mem=0
      }
      fin-=1
    }
    for (i<-debut to fin) {
      j=fin-i
      if (plusPetit(j,j+1)) {
        echange(j,j+1)
        mem=0
      }
    	debut+=1
    }
  } while (mem==0)
}